--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.8.0
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-private-key: ${{ secrets.SSHPRIVATEKEY }}
 
       - name: Deploy via SSH
-        run: ssh -o StrictHostKeyChecking=no root@YOUR_SERVER_IP "cd /var/www/your-folder && git pull && sudo systemctl restart nginx"
+        run: ssh -o StrictHostKeyChecking=no root@157.180.122.108 "cd /sertac/my-personal-website && git pull && sudo systemctl restart nginx"
