--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Server
 on:
   push:
     branches:
-      - main # or your default branch
+      - main
 
 jobs:
   deploy:
@@ -14,9 +14,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.8.0
+        uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.SSHPRIVATEKEY }}
+
+      - name: Test SSH connection
+        run: ssh -o StrictHostKeyChecking=no root@157.180.122.108 "echo Connected"
 
       - name: Deploy via SSH
         run: ssh -o StrictHostKeyChecking=no root@157.180.122.108 "cd /sertac/my-personal-website && git pull && sudo systemctl restart nginx"
