--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Hetzner
+name: deploy
 
 on:
   push:
@@ -10,34 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-
-      - name: Install dependencies & build
-        run: |
-          npm ci
-          npm run build
-
       - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.8.0
+        uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.SSHPRIVATEKEY }}
 
-      - name: Sync project to server
+      - name: Deploy via SSH
         run: |
-          rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" . root@157.180.122.108:/var/www/my-personal-website/
-
-      - name: Restart app on server
-        run: |
-          ssh -o StrictHostKeyChecking=no root@157.180.122.108 << 'EOF'
-            cd /var/www/my-personal-website
-            npm install --omit=dev
-            pm2 delete my-site || true
-            pm2 start npm --name my-site -- run start
-            pm2 save
-          EOF
+          ssh -o StrictHostKeyChecking=no root@157.180.122.108 "
+            cd /sertac/my-personal-website && \
+            git pull && \
+            npm install && \
+            npm run build && \
+            pm2 reload my-website || pm2 start npm --name 'my-website' -- start
+          "
