--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,32 @@
-name: deploy
+name: Deploy to Hetzner
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.7.0
-        with:
-          ssh-private-key: ${{ secrets.SSHPRIVATEKEY }}
+    - name: Install SSH key
+      uses: webfactory/ssh-agent@v0.8.0
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Deploy via SSH
-        run: |
-          ssh -o StrictHostKeyChecking=no root@157.180.122.108 "
-            cd /sertac/my-personal-website && \
-            git pull && \
-            npm install && \
-            npm run build && \
-            pm2 reload my-website || pm2 start npm --name 'my-website' -- start
-          "
+    - name: Deploy over SSH
+      run: |
+        ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+          cd /var/www/my-personal-website
+
+          git pull origin main
+
+          npm install
+
+          npm run build
+
+          pm2 restart my-website
+        EOF
