--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,36 @@
-name: Deploy to Hetzner
+name: Build and Deploy Docker
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
+    - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Install SSH key
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Build Docker image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-website:latest .
+
+    - name: Push Docker image to Docker Hub
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/my-website:latest
+
+    - name: Set up SSH
       uses: webfactory/ssh-agent@v0.8.0
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-    - name: Deploy over SSH
+    - name: Deploy on Hetzner server
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-          cd /var/www/my-personal-website
-
-          git config --global --add safe.directory /var/www/my-personal-website
-          
-          git pull origin main
-
-          npm install
-
-          npm run build
-
-          pm2 restart my-website
+          docker pull ${{ secrets.DOCKER_USERNAME }}/my-website:latest
+          docker stop my-website || true
+          docker rm my-website || true
+          docker run -d --name my-website -p 8080:3000 ${{ secrets.DOCKER_USERNAME }}/my-website:latest
         EOF
