--- a/hpa-demo.yaml
+++ b/hpa-demo.yaml
@@ -1,3 +1,4 @@
+sudo k3s kubectl apply -f - <<'EOF'
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -51,3 +52,4 @@ spec:
       target:
         type: Utilization
         averageUtilization: 50
+EOF
